# autocut-v2

./: .gitignore  OPTIMIZATION_SUMMARY.md  README.md  STATUS.md  config.md  config.yml  config_template.yml  launch.ps1  pyproject.toml  requirements.txt  specifications.txt  test_basic.py  test_criteria.py  test_criteria_simple.py
.github/: copilot-instructions.md
docs/: installation-experience.md  installation-guide.md
prompts/: prompt.txt
scripts/: README.md  install-linux.sh  install-macos.sh  install-windows.ps1
src/autocut_v2/: __init__.py  __main__.py  cli.py
src/autocut_v2/core/: criteria.py  processor.py  scene_detector.py  workflow.py
src/autocut_v2/processors/: video_cutter.py
src/autocut_v2/utils/: config.py  file_handler.py
tests/integration/: test_pipeline.py
tests/unit/: test_criteria.py  test_fallbacks.py
